--- a/OeuvresRestFul/nbproject/project.properties
+++ b/OeuvresRestFul/nbproject/project.properties
@@ -34,7 +34,9 @@ rest.config.type=ide
 javac.source=1.5
 javac.debug=true
 javac.test.processorpath=${javac.test.classpath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.notree=false
 runmain.jvmargs=
@@ -47,7 +49,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 war.content.additional=
 client.urlPart=
 javadoc.additionalparam=
-javac.classpath=${libs.jstl.classpath}
+javac.classpath=
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
@@ -63,7 +65,8 @@ conf.dir=${source.root}/conf
 annotation.processing.run.all.processors=true
 compile.jsps=false
 excludes=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 display.browser=true
 endorsed.classpath=
@@ -72,7 +75,11 @@ build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
 war.name=OeuvresRestFul.war
 javadoc.windowtitle=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 src.dir=${source.root}/java
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${build.classes.dir}\:${javac.classpath}
