--- a/OeuvresRestFul/nbproject/private/private.properties
+++ b/OeuvresRestFul/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Epulapp\\AppData\\Roaming\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv3673851296.properties
+deploy.ant.properties.file=C:\\Users\\Epulapp\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3673851296.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=D:/glassfish-4.0/glassfish/domains/domain1
 j2ee.server.home=D:/glassfish-4.0/glassfish
@@ -6,5 +6,5 @@ j2ee.server.instance=[D:\\glassfish-4.0\\glassfish;D:\\glassfish-4.0\\glassfish\
 j2ee.server.middleware=D:/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\Epulapp\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+selected.browser=SL[/Browsers/FirefoxBrowser
+user.properties.file=C:\\Users\\Epulapp\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
